--- a/笔记文件/06具体的数字类型.md
+++ b/笔记文件/06具体的数字类型.md
@@ -23,7 +23,7 @@
 4字节一共有32个比特，可以储存2的32次方的数字。并且由于他是有符号的，所以可以储存负数。
 他的计数范围大概是==负21亿 到 正21亿==。具体的数字，可以自己动手算算2的31次方是多少。
 
-而不储存符号的`uint`类型，技术范围则是==0 到 正2的32次方==。其他的类型都是这个道理。
+而不储存符号的`uint`类型，计数范围则是==0 到 正2的32次方==。其他的类型都是这个道理。
 
 
 [^5]:int是integer的缩写。integer的意思是整数。
