--- a/笔记文件/13数组和元组.md
+++ b/笔记文件/13数组和元组.md
@@ -10,6 +10,11 @@
 
 一个数组的值使用`new int[10]`的方式进行构造。方括号中的10表示一共声明10个变量。
 使用`var`识别时，`var`能正确识别出数组类型，不需要写`var[]`。
+
+如果一开始就确定数组的内容和数量，则可以使用集合表达式。
+类似于这种形式：`[1,2,3,4]`。
+集合表达式是为具有集合特点的类型进行初始化的表达式。
+他本身没有类型，只能给确定类型的变量进行赋值。
 ## 访问元素
 数组中的元素使用方括号和索引进行访问。类似于`arr[0]`。
 这样访问的时候，他就如同变量一般使用，既能赋值也能读取值。
