--- a/语法/变量.md
+++ b/语法/变量.md
@@ -1,14 +1,13 @@
-﻿# 实例
+﻿# 变量
+
+在c#中，可以用变量表示一个实例。它可以储存值并行使这个值的所有功能。
 
 实例是说任何可以说“这个”，“那个”的东西。其隐藏含义是，等会还要讨论“同一个”东西。
 
-例如法庭上如果觉得法官和对方有关系，可以要求换个法官。\
-但被告人是换不得的，不管他和谁怎么有关系，都得是这个人站在被告席上。\
-并且制造案件/争论的也得是这个人，执行判决的也得是这个人。
+例如用户输入的账号，和用于和数据库判断的账号是同一个。\
+击杀了小兵的英雄，和获得金币的英雄是同一个。
 
-# 变量
-
-在c#中，可以用变量表示一个实例。它可以储存值并行使这个值的所有功能。
+在编写阶段，无从得知发生这些事的“账号”和“英雄”是哪一个。所以需要能表示实例的东西。
 
 ### 声明和使用变量
 
