--- a/语法/访问权限.md
+++ b/语法/访问权限.md
@@ -1,10 +1,4 @@
-﻿# 类成员
-
-自定义类型内部直属的东西称为类成员。而方法里声明的东西称为局部XX。
-区别在于，方法里的东西一旦方法结束，里面声明的东西就没用了，会被清理。
-而自定义类型里的东西，是跟随整个类存在的，只有整个类不用了，里面的东西才会被一起清理。
-
-# 访问权限
+﻿# 访问权限
 
 局部变量和局部方法都的作用域都是自身所在大括号即内层所有大括号。
 
@@ -12,11 +6,48 @@
 类成员可以添加访问修饰符，以供自身所在大括号外部访问。
 
 ```csharp
-record struct Hero(string Name, int Hp, int Atk)
+MyStruct myStruct = new MyStruct("", 12);
+myStruct.Hello();
+record MyStruct(string Name, int Age)
 {
+	public int Id { get; private set; }
+
 	public void Hello()
 	{
-		Console.WriteLine("你好，我是" + Name);
+		Console.WriteLine(Name);//类型内可以访问成员变量
+	}
+
+	struct Struct2()
+	{
+		void Hello(MyStruct my)
+		{
+			Console.WriteLine(my.Name);//嵌套的类型也可以访问到外部成员。
+		}
 	}
 }
-``` 
+```
+
+属性和索引还可以单独为其中一个访问器设置更低的访问权限。
+
+## 可用的访问权限
+
+调用方的位置	|public（公开）|protected  internal|protected（保护）|internal(内部)|private protected|private（私有）
+--|--|--|--|--|--|--
+成员和内部类|✔️|✔️|✔️|✔️|✔️|✔️
+派生类|✔️|✔️|✔️|✔️|✔️|❌
+相同程序集|✔️|✔️|❌|✔️|❌|❌
+不同程序集的派生类|✔️|✔️|✔️|❌|❌|❌
+任何|✔️|❌|❌|❌|❌|❌
+
+## 默认访问权限
+
+成员|没写修饰符时可访问性|允许的成员的声明的可访问性
+--|--|--
+命名空间|public|无（不能添加修饰符）
+枚举|public |无（不能添加修饰符）
+顶级类|internal|internal 或 public 
+嵌套类|private|全部
+类成员|private|全部
+嵌套结构|private|除了带有protected的访问权限。
+
+默认访问权限是所有可选权限中最严格的。
