--- a/附录/目录.md
+++ b/附录/目录.md
@@ -4,28 +4,31 @@
 - [x] 类型
 - [x] 字面量
 - [x] 变量
-- [x] 类型转换
-- [x] 流程控制（选择和循环，异常捕获，作用域，跳转
+- [x] 选择
+- [x] 循环
+- [x] 跳转
+- [x] 异常捕获
 - [x] 元组和匿名类型
-- [x] 运算符和表达式
+- [x] 运算符
+- [x] 取值表达式
+- [x] 模式匹配
+- [x] 运算顺序
 - [x] 数组
 - [x] 引用类型（可空值类型，空传播
-- [x] 方法，返回值，参数，引用变量
-- [x] 自定义类型（访问权限
-- [ ] 结构，类，记录
-- [ ] 访问权限
-- [ ] 属性
-- [ ] 构造器
-- [ ] 静态
-- [ ] 泛型
+- [x] 方法，返回值，参数，引用变量 
+- [x] 自定义类型
+- [x] 类成员
+- [x] 访问权限
+- [x] 实例和静态
+- [x] 结构和类
+- [x] 枚举
+- [x] 命名空间，引用命名空间
+- [ ] 继承
 - [ ] 接口
-- [ ] 类
-- [ ] 特殊类（静态类，只读结构，引用结构）
-- [ ] 对象初始化器
-- [ ] 命名空间
-- [ ] 引用命名空间
-- [ ] 运算符
+- [ ] 泛型
 - [ ] 委托
+- [ ] 异步
+- [ ] 特性
 
 # API
 
