--- a/语法/异常捕获.md
+++ b/语法/异常捕获.md
@@ -119,6 +119,15 @@ catch
 } 
 ```
 
+## 异常类
+
+异常类是指所有派生自`Exception`的类型。
+捕获`Exception`异常和不填写类型是等效的。
+
+你可以自定义派生自`Exception`的异常类。
+
+在不抛出和捕获时，异常实例就是普通的值，可以访问内容，赋值和读取。
+
 ## 附加判断
 
 在`try-catch`的`catch`后，可以使用`when`附加一个普通的条件判断。
