--- a/语法/访问权限.md
+++ b/语法/访问权限.md
@@ -48,6 +48,5 @@ record MyStruct(string Name, int Age)
 顶级类|internal|internal 或 public 
 嵌套类|private|全部
 类成员|private|全部
+接口的实例成员|public|全部
 嵌套结构|private|除了带有protected的访问权限。
-
-默认访问权限是所有可选权限中最严格的。
