--- a/附录/目录.md
+++ b/附录/目录.md
@@ -23,12 +23,13 @@
 - [x] 结构和类
 - [x] 枚举
 - [x] 命名空间，引用命名空间
-- [ ] 继承
-- [ ] 接口
-- [ ] 泛型
-- [ ] 委托
-- [ ] 异步
-- [ ] 特性
+- [x] 接口
+- [x] 继承
+- [x] 特性
+- [x] 委托
+- [x] 泛型
+- [x] 异步
+- [x] 迭代器
 
 # API
 
@@ -47,6 +48,7 @@
 - [ ] 数组
 - [ ] 委托
 - [ ] 枚举
+- [ ] Linq
 
 # Visual Studio
 
