--- a/语法/实例和静态.md
+++ b/语法/实例和静态.md
@@ -82,6 +82,38 @@ record People(string Name)
 调用的其他构造器只能在构造器执行的最开始。
 如果有主构造器，那么调用链上必须含有主构造器。
 
+## 对象初始化器
+
+构造器是一种特殊的方法，因为不是从某个实例上调用的，所以必须配合关键字`new`使用。
+
+- 在调用构造器时，如果类型明确，可以省略方法名。
+- 构造器参数可以用大括号对它的成员进行赋值。
+  -  这个赋值晚于构造器执行。
+  -  这个赋值可以访问`init`访问器，但不能访问`readonly`字段。 
+  -  如果是无参且没有省略方法名，可以省略参数括号。 
+
+```csharp
+Point p = new Point
+{
+	X = 20,
+	Y = 30
+};
+p.Hello(new(1, 2));
+
+
+record Point(int X, int Y)
+{
+	public Point() : this(10, 20)
+	{
+	}
+	public Point Hello(Point p)
+	{
+		return new() { Y = p.Y };
+	}
+}
+```
+
+
 ## 终结器
 
 终结器的语法是和类型同名的方法，前面加上`~`。
