--- a/语法/异步.md
+++ b/语法/异步.md
@@ -3,11 +3,13 @@
 ## 异步方法
 
 在方法前用`async`修饰可以使方法成为异步方法。
-异步方法的返回值只能是以下类型
+异步方法的返回值只能是以下类型，如果有，也包括它们的泛型版本。
 
-- `Task`及其泛型。
-- `ValueTask`及其泛型。
-- `void`。
+- `Task`
+- `ValueTask`
+- `IAsyncEnumerator`
+- `IAsyncEnumerable`
+- `void`
 
 异步方法会自动把返回的值包装为泛型的`Task`。
 例如返回`Task<int>`类型只需要`return`一个`int`值。
@@ -65,6 +67,9 @@ async Task HelloAsync()
   - 和多线程消耗的资源是一样的。
   - 使用异步让渡给后台线程计算，主线程继续其他操作。
 	- 程序的主线程一般都需要绘制画面。主线程繁忙会导致窗口卡顿。
+
+`ValueTask`是值类型的，用于高性能代码中。
+但它不适用大多数`Task`的API，且只能被等待一次。
 
 ## 锁
 
