--- a/语法/结构和类.md
+++ b/语法/结构和类.md
@@ -160,3 +160,15 @@ var my3 = my2 with { };
 
 record MyClass(int X, int Y);
 ```
+
+### 创建部分属性修改的新值
+
+对于值类型，匿名类型，记录类，可以使用`with`创建部分内容变动的新值，其他内容照原样复制。
+
+```csharp
+var student1 = (age: 12, name: "小明");
+var student2 = new { age = 12, name = "小明" };
+
+var student3 = student1 with { age = 15 };
+var student4 = student2 with { name = "小丽" };
+```
