--- a/附录/目录.md
+++ b/附录/目录.md
@@ -33,22 +33,28 @@
 
 # API
 
-- [ ] 数字
-- [ ] 随机数
+- [x] 数字
 - [ ] 字符串
+- [ ] 随机数
 - [ ] 时间
+- [ ] 数组
+- [ ] Object
+- [ ] ValueType
+- [ ] 枚举
+- [ ] 委托
+- [ ] Linq
+- [ ] Task
 - [ ] 列表
 - [ ] 字典
+- [ ] 集
+- [ ] 链表
+- [ ] 反射
 - [ ] 异步锁
 - [ ] Jobject
 - [ ] Xml
 - [ ] 网络连接
+- [ ] 文件访问
 - [ ] 主机（依赖注入）
-- [ ] 反射
-- [ ] 数组
-- [ ] 委托
-- [ ] 枚举
-- [ ] Linq
 
 # Visual Studio
 
