--- a/API笔记/数字.md
+++ b/API笔记/数字.md
@@ -1,38 +1,29 @@
 ﻿# 基本数字类型
+  
+## 示数范围
 
-## 整数类型
+所有基本数字类型都有静态成员`MaxValue`和`MinValue`表示储存极限。
 
-整数类型可以按照字节数和是否储存符号划分为：
+每种数字类型的范围和所占字节大小可以参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/numerics)。
 
-内容|1字节|2字节|4字节|8字节
--|-|-|-|-
-有符号|sbyte|short|int|long
-无符号|byte|ushort|uint|ulong
+### 整数储存方式
 
-1字节=8比特。每个比特就是储存一个0或1的状态。
+一个1和0，表示两种状态。在计算机中称为比特，或是二进制的数位。
+那么，两个比特就能表示2*2=4种状态，三个比特就可以表示8种状态。
+一字节=8比特，`int`类型占4字节，一共可以表示2的32次方种状态。
 
-计数范围的计算公式就是2的比特数次方。
-例如`uint`一共可以储存2的32次方，一共42亿种情况。
+当计算时数字溢出时，会从最大值变到最小值，就好像时钟走了一个周期一样。
+整数中的符号位用最大的那一位储存，所以一个负数也相当于一个特别大的正数。
+这样做的好处是，计算加减法时不必为符号位单独处理，只需要一起加，一起进位。
 
-如果是有符号的类型，那么拿一半分到负数上，例如`int`是`-21亿~21亿`。
+### 浮点数储存方式
 
-## 浮点数
+浮点数的计数采用科学计数法。类似于`1.001101*2^1001^`。
 
-类型|字节|上限|精度
--|-|-|-|-
-float|4|3.4E+38|2^23^
-double|8|1.79E+308|2^52^
-decimal|16|7.92E+28|2^96^
-
-浮点数的储存方式简单来说大致如下：
-
-1. 将一个数字转为二进制得到：1001.101
-2. 转为科学计数法：1.001101*2^3^
-3.  1. 在有效位部分储存`001101`
-    2. 在指数位储存`3`
-
+所以浮点数的储存有两部分，一部分表示精度的数，一部分表示偏移位数。
 由于科学计数法的第一位总是1，所以不用储存。
-但因此，浮点数无法分辨`0`。在浮点数中除`0`不会报错，会得到无限大。
+
+浮点数的储存是不精确的。因此浮点数里有表示无限大，和非数，可以除0。
 
 ## 字符串转数字
 
@@ -47,14 +38,8 @@ if (int.TryParse("999", out var i2))//如果文字格式不正确，方法返回
 }
 ```
 
-## 大整数
+## 数学库
 
-理论上，可以通过数组储存的方式，储存一堆字节。
-在计算时合理安排进位和对齐，可以储存任意大小的数字。
+c#中有`Math`和`MathF`类，里面有指数，对数，三角函数等常用的数学运算。
 
-c#中，写好了一个这样的类`System.Numerics.BigInteger`
-
-```csharp
-BigInteger big = BigInteger.Parse("9999999999999");
-Console.WriteLine(big*big);
-```
+`MathF`类包含部分和`Math`同名的方法。区别是`Math`返回`double`类型，`MathF`类返回`float`类型。
