--- a/语法/变量.md
+++ b/语法/变量.md
@@ -89,6 +89,8 @@ Console.WriteLine(i2+i2);
 >- 标识符应该具有和遵守约定，例如c#中的接口都以字母**I**开头。
 >- 实在无法用名字解释的，应当留下注释。
 >- 尽可能不使用`var`等不表明类型的方式声明变量。在没有开发软件帮助的情况下，读者难以判断类型。
+>
+>命名约定参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/naming-guidelines)。
 
 ## 关键字
 
