--- a/语法/接口.md
+++ b/语法/接口.md
@@ -104,6 +104,8 @@ Console.WriteLine(food.Satiety);
 - 调用者只希望使用接口的这一小部分功能。
 - 调用者不在乎实现类具体如何实现的。
 
+### 为什么要调用接口而不直接调用类
+
 举例来说：
 
 - 支付宝实现以下接口：
@@ -116,14 +118,32 @@ Console.WriteLine(food.Satiety);
   - 小程序 
 - 现金实现以下接口：
   - 转账 
-	
-当一个方法的参数是付钱接口的时候，这意味着：
-- 无论选择支付宝，微信，现金支付都可以。
-  - 你不在乎支付宝和微信是如何从服务器把钱划给你的。
-  - 写死类型可以用到养鸡/朋友圈功能。但这个场景下你用不到这些功能。 
-- 当以后有新的付款方式时，你也可以接受。
-  - 当以后数字货币实现了转账接口后，可以直接传入你的方法。
-	- 写死类型则需要新增方法重载。 
+
+#### 减少重载
+
+如果你要写死类型，那么你就要使用方法重载。
+对于支付宝，微信，现金各写一个方法。
+
+写死类型的好处是什么呢？可以用到其他的成员。
+但这个方法里，你只关心付钱，你用不到其他成员。
+
+如果限定微信，可以说要别人发个朋友圈广告。
+但如果限定支付宝，你是打算检查他养的鸡多少等级了吗？
+
+而且这里除了类型不同以外，逻辑都是一样的。
+也就是说只要类型相同，就不需要重载，只要一个方法就能写完。
+
+#### 适应未来
+
+如果这个类，现在不存在呢？比如说数字货币还没有广泛使用。
+
+如果哪一天数字货币成为主流，你打算把所有卖出去的产品召回更新系统吗？
+或许做成联网的动态更新程序会简单一点。
+但是如果你一开始接收的是接口，那你什么都不需要做。
+
+又比如，你现在使用的API都是微软写好的。
+如果你希望微软调用你的类型，你要怎么做？
+先上传你的代码，然后等一年等到他们发布更新？
 
 ## 释放接口
 
@@ -149,3 +169,6 @@ class Dis(string s) : IDisposable
 	}
 }
 ```
+
+由于终结器调用时机的不确定性，通常使用释放模式对不使用的东西进行清理。
+释放模式设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/dispose-pattern)。
