--- a/语法/泛型.md
+++ b/语法/泛型.md
@@ -151,7 +151,14 @@ interface IIn<in T>
 
 ## 装箱
 
-引用类型存放的地方是堆空间，程序存放一般数据的地方。
+引用类型因为有继承，多态，虚方法等功能。
+在调用成员时需要从对象头里查询类型信息，然后查表找到要调用的成员。
 
-程序运行时
+值类型是没有对象头的，所以值类型不允许继承。编译器会把要调用的成员写死进去。
 
+把值类型变为引用类型这一过程，要给他加一个对象头。这个过程叫装箱。
+反过来拆对象头也有性能损耗。
+
+协变逆变不允许出现需要装箱，拆箱的过程。
+
+更多介绍参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/csharp/programming-guide/types/boxing-and-unboxing)
