--- a/语法/类成员.md
+++ b/语法/类成员.md
@@ -45,11 +45,12 @@ record Point
 
 ## 属性
 
-属性是方法，但却以字段的形式进行调用。其理念是：
+属性是方法，但却以字段的形式进行调用。其理念大致有：
 
 - 封装字段。设计理念要求字段是不能访问的，一切通过属性访问。
-- 读取不会影响任何值，修改不会影响自己以外的值。
-- 方法可以报错，属性不应该报错。
+- 读取不会影响任何值，修改不会影响自己以外的值。（参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/fundamentals/code-analysis/quality-rules/ca1024#when-to-suppress-warnings)）
+- 方法可以报错，属性不应该报错。（参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/fundamentals/code-analysis/quality-rules/ca1065#property-get-methods)）
+
 
 ```csharp
 record Rec()
