--- a/语法/结构和类.md
+++ b/语法/结构和类.md
@@ -2,9 +2,11 @@
 
 结构和类是c#中储存数据的基本单元。
 
+结构和类的取舍的设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/choosing-between-class-and-struct)。
+
 ## 结构
 
-结构是值类型，一般用于高性能代码中。
+结构是值类型，一般用于高性能代码中。（设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/struct)）
 
 - 变量里直接存储内容，没有查找指针的开销。
 - 赋值变量会复制所有内容， 要注意大型结构的复制开销。
@@ -98,13 +100,16 @@ class MyClass;
 ### 静态类
 
 静态类是c#中的工具类。这种类型不允许存在构造方法和创建实例。
+静态类的设计理念参阅[这里]（https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/static-class）。
+
+#### 扩展方法
+
 静态类中可以存在扩展方法。
 
 - 第一个参数使用`this`修饰。
 - 扩展方法可以从被修饰的类型上以实例方法语法调用，不填入`this`修饰的参数。
 - 仍然是静态方法，所以可以从`null`身上调用。
 - 对于结构，可以同时使用`ref`修饰。
-
 
 ```csharp
 string s1 = "世界";
