--- a/语法/取值表达式.md
+++ b/语法/取值表达式.md
@@ -115,3 +115,5 @@ Console.WriteLine($"{f:x}");//11d，以16进制显示。字母部分的大小写
 Console.WriteLine($"{d:f3}");//12.123，指定小数位数,会四舍五入或补0来达到指定位数
 Console.WriteLine($"{d:e2}");//1.21e+001，科学计数法显示，e后面的数字即小数点后的有效数字，四舍五入
 ```
+
+内置的说明符请参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/base-types/standard-numeric-format-strings)。
