--- a/语法/委托.md
+++ b/语法/委托.md
@@ -34,6 +34,15 @@ delegate string GetName(string name);
 
 只有返回值和参数数量，类型，顺序能匹配的方法才能作为委托的值。
 
+### 为什么要把方法储存为变量再调用而不直接调用方法
+
+你现在用的API都是微软写好的。如果你希望微软调用你的方法你要怎么做？
+先上传你的代码，然后等一年等到他们发布更新？
+
+他们的方法里使用委托作为参数，这样无论什么人，事后写了什么方法，他们都不需要再改了。
+
+既然他们可以偷懒，你为什么不能也用这个特性来偷懒呢？
+
 ## 多播委托
 
 委托也可以和方法进行`+`和`-`，当一个委托储存了多个方法时称为**多播委托**
