--- a/API笔记/反射.md
+++ b/API笔记/反射.md
@@ -1,1 +1,302 @@
-﻿
+﻿# 反射
+
+写在源码里的变量名，在编译后都会变成机器码。它们原本的名字在运行时是不重要的。
+但是如果，这些名字真的很重要呢？
+
+例如任意创建一个类,他的默认`ToString`方法输出的是这个类的名字。
+这个`ToString`方法并不是由编译器自动合成的，而是在`Object`类中的默认实现。
+可是，`Object`又不知道自己会被谁继承，怎么知道继承自己的是什么名字呢？
+
+**反射**是一种在运行时检查元数据的技术。
+元数据是描述数据的数据。例如字段名字，字段的访问权限。
+
+## 获取Type和成员
+
+```csharp
+Type type1 = new P().GetType();
+Type type2 = typeof(P);
+Type type3 = Type.GetType("P")!;
+
+class P
+{
+}
+```
+
+- 对已有实例调用`GetType`方法。
+  - 这个方法是`Object`里的方法，所以所有实例都存在。
+  - 静态类没有实例，不能用此方法获取静态类的`Type` 
+- 用关键字`typeof`获取已知类的`Type`
+  - 这样做会写死。
+  - 可以在泛型里对泛型占位使用，运行时会作用于填入的类型。 
+- 通过静态方法`Type.GetType`和类型的完全限定名使用。
+  - 对如何获取完全限定名需要下一番功夫。例如要求文件里只有一个类，并且类名和文件名相同。
+
+## 获取成员
+
+```csharp
+Type type = typeof(PeoPle);
+var p = type.GetProperties();
+foreach (var item in p)
+{
+	Console.WriteLine(item.Name);
+}
+var f = type.GetField("name", BindingFlags.Instance | BindingFlags.NonPublic);
+Console.WriteLine(f.Name);
+
+var m = type.GetMethod("Hello", [typeof(string)]);
+
+class PeoPle
+{
+	[Description("年龄")]
+	public int Age { get; set; }
+	private string name;
+	public static readonly string race = "人类";
+
+	public void Hello(string name)
+	{
+		Console.WriteLine($"你好，{name}。我的名字是{this.name}");
+	}
+}
+```
+
+从`Type`中可以获取到这个类型的字段/属性/事件/方法/构造器。
+这些方法都有从指定名字获取一个，和获取所有的方法。这些方法在命名上以复数的形式，通常以`s`结尾。
+
+在获取时，可以加上一个`BindingFlags`以明确查找范围，否则默认为实例，静态，公共。
+自己填写查找时，实例与静态，公共与非公共这钟互斥的范围里，至少要含有一个。
+
+对于方法，因为有重载，所以还可以填入参数类型以确保指定的方法。类型以`Type`数组填入。
+
+## 获取成员信息
+
+```csharp
+Console.WriteLine(type.Name);//类型名
+Console.WriteLine(type.Namespace);//命名空间
+Console.WriteLine(type.IsAssignableTo(typeof(object)));//是不是指定类型（判断继承和实现接口）
+Console.WriteLine(type.IsEnum);//判断是不是结构/枚举/数组/类/接口时，有更简单的方式
+
+Console.WriteLine(f.FieldType);//字段的类型
+Console.WriteLine(f.DeclaringType);//在那个类型里声明的
+
+Console.WriteLine(p[0].CanRead);//有没有get访问器
+Console.WriteLine(p[0].GetGetMethod().IsAbstract);//是不是抽象的（必须获取访问权来访问）
+Console.WriteLine(p[0].IsDefined(typeof(DescriptionAttribute)));//检查是否具有特性
+DescriptionAttribute attribute = p[0].GetCustomAttribute<DescriptionAttribute>();//获取特性
+Console.WriteLine(attribute.Description);
+
+Console.WriteLine(m.IsVirtual);//是不是虚拟的
+Console.WriteLine(m.IsStatic);//是不是静态的
+ParameterInfo[] par = m.GetParameters();//获取参数列表
+Console.WriteLine(par[0].Name);//获取参数名字
+Console.WriteLine(par[0].ParameterType);//获取参数类型
+```
+
+获取到类型的字段/属性/事件/方法/构造器后可以查看它们的信息。
+
+例如名字，访问权限，有没有`get`访问权，是不是虚拟/抽象的，是不是静态的，类型/返回类型/参数列表。
+
+## 执行成员
+
+```csharp
+PeoPle peo = new PeoPle();
+
+f.GetValue(peo);
+p[0].SetValue(peo, 13);
+m.Invoke(peo, ["小刚"]);
+```
+
+反射获取到字段/属性/方法后可以对一个已有实例进行读取/修改/执行。
+
+如果成员是静态的，则传入的实例可以是`null`。
+
+以此法执行成员可以绕过访问权限。以至于对匿名字段修改和访问。
+
+## 交互泛型
+
+```csharp
+Type type1 = typeof(G<>);
+Type type2 = typeof(G<int>);
+ 
+Console.WriteLine(type1== type2.GetGenericTypeDefinition());//GetGenericTypeDefinition方法返回所有泛型参数为空的模板
+Console.WriteLine(type1.MakeGenericType(typeof(int))==type2);//MakeGenericType方法根据指定参数构造一个泛型类
+```
+
+## 交互数组
+
+```csharp
+Type type = typeof(int[,,]);
+Console.WriteLine(type.GetArrayRank());//获取多维数组的维度（秩）
+
+typeof(int).MakeArrayType(3);//创建这个类型的多维数组
+typeof(int).MakeArrayType();//创建这个类型的数组
+```
+
+## 交互程序集
+
+```csharp
+Assembly currentAssembly = Assembly.GetExecutingAssembly();//当前代码所在程序集
+Assembly DeclaringAssembly = typeof(int).Assembly;//这个类所在程序集
+
+byte[] b = new byte[0];
+Assembly LoadAssembly=Assembly.Load(b);//从二进制加载程序集
+//程序集必须完全在内存中加载，所以不能使用流加载，必须完全读取流为字节数组。
+//可以从包括网络中加载程序集。但必须为安全性负责。
+
+Type[] types = currentAssembly.GetTypes();//获取这个程序集下所有Type
+```
+
+## 表达式树
+
+反射可以实现动态代码，但有很大的性能损耗。
+因为反射无法确定类型，反射相关的API都是以`object`传递值的，每个地方都要进行类型检查。
+为了提高性能可以配合表达式树。
+
+```csharp
+// 创建一个参数表达式，表示 a 对象
+var aParameter = Expression.Parameter(typeof(Person), "a");
+// 创建一个参数表达式，表示 b 对象
+var bParameter = Expression.Parameter(typeof(Person), "b");
+
+// 创建一个表示 a.age 的属性访问表达式
+var agePropertyA = Expression.Property(aParameter, "Age");
+// 创建一个表示 b.age 的属性访问表达式
+var agePropertyB = Expression.Property(bParameter, "Age");
+
+// 创建一个表示 a.age + b.age 的加法表达式
+var sumExpression = Expression.Add(agePropertyA, agePropertyB);
+
+// 输出表达式树
+Console.WriteLine(sumExpression);
+
+class Person
+{
+	public int Age { get; set; }
+	public string Name { get; set; }
+}
+```
+
+表达式树的构建通常依靠反射进行。但构建完成以后调用表达式树的性能消耗只有调用委托一样。
+例如对于以下结构，希望重载他的`+`运算符，并且逻辑只是简单的把所有字段相加。
+
+```csharp
+public struct Fight
+{
+	public float Hp;
+	public float MaxHp;
+	public float Atk;
+	public float Def;
+	public int Level;
+	public int Exp;
+
+	public static Fight operator +(Fight a, Fight b)
+	{
+		var properties = typeof(Fight).GetFields(BindingFlags.Public | BindingFlags.NonPublic | BindingFlags.Instance); // 获取所有属性
+
+		// 创建参数表达式
+		ParameterExpression paramA = Expression.Parameter(typeof(Fight), "a");
+		ParameterExpression paramB = Expression.Parameter(typeof(Fight), "b");
+
+		// 创建属性相加的表达式
+		var propertyExpressions = properties.Select(property =>
+		{
+			//访问字段
+			var propertyA = Expression.Field(paramA, property.Name);
+			var propertyB = Expression.Field(paramB, property.Name);
+			//加法
+			return Expression.Add(propertyA, propertyB);
+		});
+
+		// 创建新的 Fight 对象
+		var newFight = Expression.New(typeof(Fight));
+		//赋值操作
+		var memberBindings = properties.Zip(propertyExpressions, Expression.Bind);
+		//对象初始化器
+		var initExpression = Expression.MemberInit(newFight, properties.Zip(propertyExpressions, Expression.Bind));
+		//构造委托
+		var addFunc = Expression.Lambda<Func<Fight, Fight, Fight>>(initExpression, paramA, paramB).Compile();
+
+		return addFunc(a, b);
+	}
+}
+```
+
+修改为缓存的静态委托
+
+```csharp
+public struct Fight
+{
+	[Description("当前生命")] public float Hp;
+	[Description("最大生命")] public float MaxHp;
+	[Description("攻击")] public float Atk;
+	[Description("防御")] public float Def;
+	[Description("等级")] public int Level;
+	[Description("经验")] public int Exp;
+
+	static Func<Fight, Fight, Fight> _addFunc;
+	static Func<Fight, Fight, Fight> _subFunc;
+	static Func<Fight, Fight, bool> _equFunc;
+	static Func<Fight, string> _strFunc;
+	static Fight()
+	{
+		var properties = typeof(Fight).GetFields(BindingFlags.Public | BindingFlags.NonPublic | BindingFlags.Instance);
+		ParameterExpression paramA = Expression.Parameter(typeof(Fight), "a");
+		ParameterExpression paramB = Expression.Parameter(typeof(Fight), "b");
+		var propertyExpressions = properties.ToDictionary(property => Expression.Field(paramA, property.Name), property => Expression.Field(paramB, property.Name));
+		var newFight = Expression.New(typeof(Fight));
+
+		_addFunc = Expression.Lambda<Func<Fight, Fight, Fight>>(
+			Expression.MemberInit(newFight
+				, properties.Zip(propertyExpressions.Select(kvp => Expression.Add(kvp.Key, kvp.Value))
+				, Expression.Bind))
+			, paramA
+			, paramB)
+		.Compile();//相当于new Fight() { Atk = a.Atk + b.Atk, Def = a.Def + b.Def }
+
+		_subFunc = Expression.Lambda<Func<Fight, Fight, Fight>>(
+			Expression.MemberInit(newFight
+				, properties.Zip(propertyExpressions.Select(kvp => Expression.Subtract(kvp.Key, kvp.Value))
+				, Expression.Bind))
+			, paramA
+			, paramB)
+		.Compile();//相当于new Fight() { Atk = a.Atk - b.Atk, Def = a.Def - b.Def }
+
+		_equFunc = Expression.Lambda<Func<Fight, Fight, bool>>(
+			propertyExpressions.Select(kvp => Expression.Equal(kvp.Key, kvp.Value))
+				.Aggregate(Expression.AndAlso)
+			, paramA
+			, paramB)
+		.Compile();//相当于 a.Atk == b.Atk && a.Def == b.Def && a.Hp == b.Hp
+
+		_strFunc = Expression.Lambda<Func<Fight, string>>(Expression.Call(typeof(string)//调用string.Join(',',value)方法
+			, nameof(string.Join)//调用方法名
+			, [typeof(KeyValuePair<string, string>)]//泛型参数
+			, Expression.Constant(',')//常量参数
+			, Expression.NewArrayInit(typeof(KeyValuePair<string, string>)//构建第二参数，以数组形式并初始化值
+				, propertyExpressions.Keys.Select(item =>
+					Expression.Call(typeof(KeyValuePair)//调用KeyValuePair.Create方法创建键值对
+						, nameof(KeyValuePair.Create)//方法名
+						, [typeof(string), typeof(string)]//泛型参数
+						, Expression.Constant(item.Member.GetCustomAttribute<DescriptionAttribute>().Description)//第一参数，获取到的特性内容
+						, Expression.Call(item, nameof(ToString), [])))))//第二参数，从当前实例访问字段并调用ToString方法
+			, paramA)
+		.Compile();//相当于string.Join(',', new KeyValuePair<string, string>[] { KeyValuePair.Create("攻击", Atk.ToString()), KeyValuePair.Create("防御", Def.ToString()) }) 
+	}
+
+	public static Fight operator +(Fight a, Fight b)
+	{
+		return _addFunc(a, b);
+	}
+	public static Fight operator -(Fight a, Fight b)
+	{
+		return _subFunc(a, b);
+	}
+	public override bool Equals([NotNullWhen(true)] object? obj)
+	{
+		return obj is Fight fight && _equFunc(this, fight); 
+	}
+	public override string ToString()
+	{
+		return string.Concat('{', _strFunc(this), '}');
+	}
+}
+```
