--- a/API笔记/字符串.md
+++ b/API笔记/字符串.md
@@ -1,1 +1,88 @@
-﻿
+﻿# 字符串常用方法
+
+## 查找
+
+```csharp
+bool exist = "".Contains("");//查找字符串里是否含有XX
+int index = "".IndexOf("");//查找字符串里第一个出现的XX在第几个字符（没有则返回-1）
+int indexOfEnd = "".LastIndexOf("");//查找字符串里最后出现的XX在第几个字符（没有则返回-1）
+bool start = "".StartsWith("");//判断字符串是不是以XX开头
+bool end = "".EndsWith("");//判断字符串是不是以XX结尾
+bool isSpace = string.IsNullOrWhiteSpace("");//判断字符串是不是null或纯空白
+```
+
+## 字符串裁剪
+
+字符串可以像数组一样用索引访问里面的字符，但不能修改。
+
+```csharp
+string hello = "hello world";
+for (int i = 0; i < hello.Length; i++)
+{
+	char c = hello[i];
+}
+```
+
+字符串可以转为`char`数组，也可以从`char`数组构建出一个字符串。
+
+```csharp
+char[] chars = hello.ToCharArray();
+hello = new string(chars);
+```
+
+字符串可以通过索引和范围进行裁剪。
+
+```csharp
+hello=hello[1..8];//从索引1开始，到索引7结束（不包括8）
+Console.WriteLine(hello);
+```
+
+## 字符串拼接
+
+`Concat`方法直接拼接，`Join`方法在拼接时会加上分隔符来隔开所有参数。
+如果仅有一个参数并且这个参数类型是可以`foreach`的，那么会解析里面的元素。
+
+```csharp
+int[] arr = [1, 2, 3, 4];
+string s = string.Join(",", arr);
+s = string.Join(",", "hello", 1, " ", 2, " ", "world");
+s = string.Concat(arr);
+s = string.Concat("hello", 1, " ", 2, " ", "world");
+```
+
+## 避免中间值
+
+`string`类型是引用类型，这意味着每创建出一个字符串都会创建一个需要回收的垃圾。
+
+`string`是不可变的值，任何对值的修改都需要重新用变量进行接收。
+例如替换方法`Replace`。
+
+运算符是依次进行的，会产生中间值。例如`"名字：" + "小明" + "," + "年龄：" + "12"`会依次生成
+
+- `名字：小明`
+- `名字：小明,`
+- `名字：小明,年龄：`
+- `名字：小明,年龄：12`
+
+而最终要的只有第四个值，前三个都是不必要的中间值。
+
+在能在源码中一次性用表达式表达的情况下，尽量使用插值字符串或`Concat`等方法进行处理。
+
+如果涉及到流程控制语句，例如在循环中反复对一个字符串进行拼接或裁剪，考虑使用
+`ReadOnlySpan<char>`和`StringBuilder`类型。
+
+```csharp
+string s = "hello world";
+ReadOnlySpan<char> p = s.AsSpan();
+StringBuilder sb = new StringBuilder();
+
+for (int i = 0; i < 5; i++)
+{
+	sb.Append(i);
+	p = p[..^1];
+}
+Console.WriteLine(p.ToString());
+Console.WriteLine(sb.ToString());
+```
+
+
