--- a/语法/继承.md
+++ b/语法/继承.md
@@ -79,7 +79,7 @@ class HealthValueAdjustment//生命值变化
 }
 class Damage : HealthValueAdjustment//伤害值
 {
-	public new int Value//覆写，负数的生命变化会得到正数的伤害值
+	public new int Value//覆写，负数的生命变化会得到正数的伤害值。
 	{
 		get => -base.Value;
 		set => base.value = -Math.Max(value, 0);
