--- a/附录/目录.md
+++ b/附录/目录.md
@@ -34,7 +34,7 @@
 # API
 
 - [x] 数字
-- [ ] 字符串
+- [ ] 字符串（正则
 - [ ] 随机数
 - [ ] 时间
 - [ ] 数组
@@ -48,7 +48,7 @@
 - [ ] 字典
 - [ ] 集
 - [ ] 链表
-- [ ] 反射
+- [x] 反射
 - [ ] 异步锁
 - [ ] Jobject
 - [ ] Xml
