更新到异步

--- a/API笔记/字符串.md
+++ b/API笔记/字符串.md
@@ -1,6 +1,83 @@
 ﻿# 字符串常用方法
 
+## 字符串是不可变的
+
+字符串不能原地修改值。即修改字符串必须通过修改变量来完成。
+调用字符串的方法时，必须用一个变量去接受方法的返回值。
+
+由于字符串是引用类型，创建一个不必要的字符串，就是产生一个垃圾。
+因此高性能代码中，
+
+- 拼接：使用工具类一次性创建最终结果
+- 裁剪：使用具有指针性质的类进行引用
+
+除了这些常用操作以外，字符串的常用操作还有查找和替换。
+正则表达式可以帮助完成这些操作。
+
+
+## 拼接
+
+`Concat`方法直接拼接，`Join`方法在拼接时会加上分隔符来隔开所有参数。
+如果仅有一个参数并且这个参数类型是可以`foreach`的，那么会解析里面的元素。
+
+```csharp
+int[] arr = [1, 2, 3, 4];
+Console.WriteLine(string.Join(",", arr));
+Console.WriteLine(string.Concat(arr));
+```
+
+在流程控制语句中拼接字符串时，使用`StringBuilder`类缓存需要参与的元素。
+
+```csharp
+StringBuilder sb = new StringBuilder();
+for (int i = 0; i < 5; i++)
+{
+	sb.Append(i);
+}
+Console.WriteLine(sb.ToString());
+```
+
+## 裁剪
+
+```csharp
+string str = "123456789";
+for (int i = 0; i < 3; i++)
+{
+	var a = i * 3;
+	Console.WriteLine(str[a..(a + 3)]);
+}
+//高性能下先转为ReadOnlySpan，但需要API配合
+
+ReadOnlySpan<char> chars = str;
+for (int i = 0; i < 3; i++)
+{
+	int a = int.Parse(chars.Slice(i * 3, 3));
+	Console.WriteLine(a);
+}
+```
+
+## 分割
+
+```csharp
+using Microsoft.Extensions.Primitives;
+var str = "how are you? i'm find.";
+var arr = str.Split(' ');
+foreach (string item in arr)
+{
+	Console.WriteLine(item);
+}
+//需要安装扩展包Microsoft.Extensions.Primitives
+StringTokenizer tokenizer = new StringTokenizer(str, [' ']);
+foreach (StringSegment item in tokenizer)
+{
+	Console.WriteLine(item);
+}
+```
+
+
 ## 查找
+
+字符串可以查找是否包含什么字符，以及出现在哪里。
 
 ```csharp
 bool exist = "".Contains("");//查找字符串里是否含有XX
@@ -11,78 +88,62 @@ bool end = "".EndsWith("");//判断字符串是不是以XX结尾
 bool isSpace = string.IsNullOrWhiteSpace("");//判断字符串是不是null或纯空白
 ```
 
-## 字符串裁剪
-
-字符串可以像数组一样用索引访问里面的字符，但不能修改。
+正则表达式可以用正则来进行查找
 
 ```csharp
-string hello = "hello world";
-for (int i = 0; i < hello.Length; i++)
+string eml = "tugou@dog.com";
+if (eml.IndexOf('.') > eml.IndexOf('@') + 1 && eml.Contains('@'))
 {
-	char c = hello[i];
+	Console.WriteLine(eml + "是一个电子邮件");
+}
+if (Regex.IsMatch(eml, """.+@.+\..+"""))
+{
+	Console.WriteLine(eml + "是一个电子邮件");
 }
 ```
 
-字符串可以转为`char`数组，也可以从`char`数组构建出一个字符串。
+## 替换
+
+字符串的替换方法会替换所有查找到的内容。而正则可以更精确的进行
 
 ```csharp
-char[] chars = hello.ToCharArray();
-hello = new string(chars);
+string eml = "tugoudog@dog.com";
+Console.WriteLine(eml.Replace("dog","qq"));
+Console.WriteLine(Regex.Replace(eml,"""(?<=@)dog(?=\.)""","""qq"""));
 ```
 
-字符串可以通过索引和范围进行裁剪。
+## 正则表达式
 
-```csharp
-hello=hello[1..8];//从索引1开始，到索引7结束（不包括8）
-Console.WriteLine(hello);
-```
+正则表达式中最重要的两点是表示字符和重复数量
 
-## 字符串拼接
+- [abcABC]表示这组里任何字符
+- {1,3}表示重复1到3次
 
-`Concat`方法直接拼接，`Join`方法在拼接时会加上分隔符来隔开所有参数。
-如果仅有一个参数并且这个参数类型是可以`foreach`的，那么会解析里面的元素。
+例如[abcABC]{1,3}可以匹配
 
-```csharp
-int[] arr = [1, 2, 3, 4];
-string s = string.Join(",", arr);
-s = string.Join(",", "hello", 1, " ", 2, " ", "world");
-s = string.Concat(arr);
-s = string.Concat("hello", 1, " ", 2, " ", "world");
-```
+- aa
+- ab
+- CA
+- B
+- CCB
+- BBC
+- aCb
 
-## 避免中间值
+一些自带的组有
 
-`string`类型是引用类型，这意味着每创建出一个字符串都会创建一个需要回收的垃圾。
+- \d 数字
+- \D 不是数字
+- \w 单词字符（和c#标识符要求差不多）
+- \W 不是单词字符
+- . 除了换行的所有字符
+- ? {0,1}可能有
+- + {1,}至少1次
+- * {0,}任意次
 
-`string`是不可变的值，任何对值的修改都需要重新用变量进行接收。
-例如替换方法`Replace`。
+由于上述用于正则表达式中特殊作用。
+所以正则表达式中要表示这些符号需要在前面加`\`转义。
+并且`\`在c#的源码中也有转义的含义。
+所以如果在正则中匹配`\`，需要在c#的源码中写`\\\\`。
 
-运算符是依次进行的，会产生中间值。例如`"名字：" + "小明" + "," + "年龄：" + "12"`会依次生成
-
-- `名字：小明`
-- `名字：小明,`
-- `名字：小明,年龄：`
-- `名字：小明,年龄：12`
-
-而最终要的只有第四个值，前三个都是不必要的中间值。
-
-在能在源码中一次性用表达式表达的情况下，尽量使用插值字符串或`Concat`等方法进行处理。
-
-如果涉及到流程控制语句，例如在循环中反复对一个字符串进行拼接或裁剪，考虑使用
-`ReadOnlySpan<char>`和`StringBuilder`类型。
-
-```csharp
-string s = "hello world";
-ReadOnlySpan<char> p = s.AsSpan();
-StringBuilder sb = new StringBuilder();
-
-for (int i = 0; i < 5; i++)
-{
-	sb.Append(i);
-	p = p[..^1];
-}
-Console.WriteLine(p.ToString());
-Console.WriteLine(sb.ToString());
-```
-
+更多请参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/base-types/regular-expression-language-quick-reference)
 
