--- a/API笔记/数字.md
+++ b/API笔记/数字.md
@@ -14,7 +14,7 @@
 
 当计算时数字溢出时，会从最大值变到最小值，就好像时钟走了一个周期一样。
 整数中的符号位用最大的那一位储存，所以一个负数也相当于一个特别大的正数。
-这样做的好处是，计算加减法时不必为符号位单独处理，只需要一起加，一起进位。
+这样做的好处是，计算加减法时不必为符号位单独处理，只需要一起加，一起进位，一起溢出。
 
 ### 浮点数储存方式
 
@@ -43,3 +43,5 @@ if (int.TryParse("999", out var i2))//如果文字格式不正确，方法返回
 c#中有`Math`和`MathF`类，里面有指数，对数，三角函数等常用的数学运算。
 
 `MathF`类包含部分和`Math`同名的方法。区别是`Math`返回`double`类型，`MathF`类返回`float`类型。
+
+但自从创建了数字接口后，所有数字类自己也包含了这些静态方法。
