--- a/API笔记/随机数.md
+++ b/API笔记/随机数.md
@@ -1,1 +1,55 @@
-﻿
+﻿# 随机数
+
+c#中的随机数主要有伪随机数`Random`，强随机数`RandomNumberGenerator`类。
+顺带一提全局标识`Guid`类，他可以随机生成。
+
+## Random
+
+`Random`通过数学运算的方法生成数字。这种算法在数学上可以证明需要生成很多的数字才会出现规律，因此可以认为是一种随机。
+
+`Random`类通过构造器构造，可以选填一个初始种子。只要种子一样，那么随机出来的值就是一样的（不保证跨.Net版本仍然一样）。
+
+```csharp
+Random r1 = new Random(20);
+Random r2 = new Random(20); 
+Console.WriteLine(r1.Next(500));
+Console.WriteLine(r2.Next(500));
+```
+
+如果不需要指定种子，那么这个类提供了一个静态的实例。
+
+```csharp
+var r = Random.Shared.Next(500);
+```
+
+`Random`提供了获取一个`int`,`float`,`double`类型的数字，和从序列中随机取元素得到新数组，为数组乱序等API。
+在指定范围内取值是通过取余数的方式，所以取不到最大值。float和double没有提供指定范围的API，需要自己进行修正。
+
+```csharp
+_ = Random.Shared.Next();//随机一个非负的int
+_ = Random.Shared.Next(500);//随机一个不大于指定值的int
+_ = Random.Shared.Next(500, 1000);//随机一个两值之间的int，可以取最小值，取不到最大值
+_ = Random.Shared.NextSingle();//随机一个0到1的float。可以取0，取不到1
+_ = Random.Shared.NextDouble();//随机一个0到1的double。可以取0，取不到1
+string[] strings = Random.Shared.GetItems(["a", "b", "c"], 10);//从指定候选项中随机选取x个元素组成新数组
+Random.Shared.Shuffle(strings);//将数组乱序。直接改动原数组，不需要接收。
+```
+
+## RandomNumberGenerator
+
+`RandomNumberGenerator`类提供了更安全的随机数生成方式。但适配的类型很少。
+
+```csharp
+_ = RandomNumberGenerator.GetInt32(500);//随机一个不大于指定值的int
+_ = RandomNumberGenerator.GetInt32(500, 1000);//随机一个两值之间的int，可以取最小值，取不到最大值
+RandomNumberGenerator.Shuffle(strings.AsSpan());//乱序数组直接改动原数组，不需要接收。
+```
+
+## Guid
+
+`Guid`是一个16字节的数字。一般用作标识符。以此随机产生的标识符重复概率很低。
+并且他本身是可以比较大小的。因此可以用于在排序依据里用作映射。
+
+```csharp
+string[] newStr = strings.OrderBy(s => Guid.NewGuid()).ToArray();
+```
