--- a/语法/委托.md
+++ b/语法/委托.md
@@ -34,14 +34,16 @@ delegate string GetName(string name);
 
 只有返回值和参数数量，类型，顺序能匹配的方法才能作为委托的值。
 
-### 为什么要把方法储存为变量再调用而不直接调用方法
+## 为什么要把方法储存为变量再调用而不直接调用方法
 
-你现在用的API都是微软写好的。如果你希望微软调用你的方法你要怎么做？
-先上传你的代码，然后等一年等到他们发布更新？
+使用参数的意义就是除了参数不同以外，其他的逻辑都一样。
+仅有调用的方法不同，这种可能也是有的。
 
-他们的方法里使用委托作为参数，这样无论什么人，事后写了什么方法，他们都不需要再改了。
+对API的发布者来说，可能不知道使用者要调用什么方法。
+例如微软已经写好的API，你不能指望先把你的方法上传，
+等他们通过验证，然后让他们在他们自己的源码里去调用你的方法。
+最后等他们发布更新。
 
-既然他们可以偷懒，你为什么不能也用这个特性来偷懒呢？
 
 ## 多播委托
 
