--- a/语法/异步.md
+++ b/语法/异步.md
@@ -56,20 +56,37 @@ async Task HelloAsync()
 */
 ```
 
-被`await`等待的`Task`一般有以下情况
+## 为什么要使用异步方法
 
-- 你创建的其他异步方法。
-- 网络连接，文件访问等不需要进行计算的东西。
-  - 相较于不使用异步而言，可以在等待期间执行其他操作。
-  - 相较于开辟线程等待而言，节约了线程开销。
-	- 操作系统执行这个操作实际上不需要线程参与。 
-- 需要计算的东西。
-  - 和多线程消耗的资源是一样的。
-  - 使用异步让渡给后台线程计算，主线程继续其他操作。
-	- 程序的主线程一般都需要绘制画面。主线程繁忙会导致窗口卡顿。
+### 防止阻塞
 
-`ValueTask`是值类型的，用于高性能代码中。
-但它不适用大多数`Task`的API，且只能被等待一次。
+CPU的可同时执行的线程数远小于操作系统中需要执行的线程数。
+所以实际上，CPU运行程序是是依次执行各个线程。
+
+一个线程有三种状态：
+
+- 运行：CPU正在处理这个线程。
+- 就绪：这个线程处于轮询队列等待CPU执行。
+- 阻塞：这个线程不在轮询队列中。
+
+阻塞意味着这个线程没有就绪，需要一定条件。
+一般来说，这个条件是从硬盘/网络读取资源，或是写入资源。
+又或者是让程序进入休眠状态（条件是等待计时器）。
+
+调用异步方法可以放资源的交互发生在后台。
+不影响当前线程的执行。
+
+### 让渡线程
+
+创建线程是需要消耗性能的。而c#中和资源交互的异步方法没有使用新线程。
+因为交互资源是由操作系统监听的，一旦操作完成会发送一个信号给请求的程序。
+
+如果等待的是一个计算任务，那么c#的API也会从线程池拿出线程来执行。
+那既然没有节省资源，使用异步的意义是什么呢？
+
+意义就在于让出执行权。程序的主线程是很重要的，不能卡顿。
+窗体程序依靠主线程刷新窗口和监听用户交互。
+例如用户点击暂停，取消，拖动窗口。这些操作都必须立刻响应。
 
 ## 锁
 
