--- a/语法/接口.md
+++ b/语法/接口.md
@@ -106,44 +106,16 @@ Console.WriteLine(food.Satiety);
 
 ### 为什么要调用接口而不直接调用类
 
-举例来说：
+只有API的发布者有必要在方法参数里使用接口。
+当方法的参数使用接口能比限制为具体的类可以让更多人调用。
 
-- 支付宝实现以下接口：
-  - 养鸡
-  - 种树 
-  - 转账
-- 微信实现以下接口：
-  - 转账
-  - 朋友圈
-  - 小程序 
-- 现金实现以下接口：
-  - 转账 
+编程的设计理念中有一点是“不要重复造轮子”。
+意思是已经存在的功能就直接调用，不要自己再去实现一遍。
+因此，对于已经发布的API应当认为这个API已经有很多人使用和依赖这个API。
+不应该再对这个API进行更改。
 
-#### 减少重载
-
-如果你要写死类型，那么你就要使用方法重载。
-对于支付宝，微信，现金各写一个方法。
-
-写死类型的好处是什么呢？可以用到其他的成员。
-但这个方法里，你只关心付钱，你用不到其他成员。
-
-如果限定微信，可以说要别人发个朋友圈广告。
-但如果限定支付宝，你是打算检查他养的鸡多少等级了吗？
-
-而且这里除了类型不同以外，逻辑都是一样的。
-也就是说只要类型相同，就不需要重载，只要一个方法就能写完。
-
-#### 适应未来
-
-如果这个类，现在不存在呢？比如说数字货币还没有广泛使用。
-
-如果哪一天数字货币成为主流，你打算把所有卖出去的产品召回更新系统吗？
-或许做成联网的动态更新程序会简单一点。
-但是如果你一开始接收的是接口，那你什么都不需要做。
-
-又比如，你现在使用的API都是微软写好的。
-如果你希望微软调用你的类型，你要怎么做？
-先上传你的代码，然后等一年等到他们发布更新？
+因为说不定有的功能就是“本功能基于bug运行”。
+因此在API发布时就应该尽可能支持更多的情况。
 
 ## 释放接口
 
