--- a/附录/目录.md
+++ b/附录/目录.md
@@ -34,23 +34,19 @@
 # API
 
 - [x] 数字
-- [ ] 字符串（正则
-- [ ] 随机数
-- [ ] 时间
-- [ ] 数组
-- [ ] Object
-- [ ] ValueType
-- [ ] 枚举
-- [ ] 委托
-- [ ] Linq
-- [ ] Task
+- [x] 字符串
+- [x] 随机数
+- [x] 时间
+- [x] 各类型基类
+- [x] Linq
+- [x] Task
 - [ ] 列表
 - [ ] 字典
 - [ ] 集
 - [ ] 链表
 - [x] 反射
 - [ ] 异步锁
-- [ ] Jobject
+- [ ] json
 - [ ] Xml
 - [ ] 网络连接
 - [ ] 文件访问
