--- a/API笔记/列表.md
+++ b/API笔记/列表.md
@@ -1,1 +1,112 @@
-﻿
+﻿# 列表
+
+列表是一种很像数组的数据容器。
+他内部有一个数组。在容量不够时自动创建一个新数组并复制原数组里的内容。
+
+在使用的角度而言，相当于一个自动扩容的数组。
+
+## 基本使用
+
+### 创建
+
+```csharp
+List<int> list = new List<int>();
+```
+
+### 添加元素
+
+```csharp
+for (int i = 0; i < 5; i++)
+{
+	list.Add(i);
+}
+```
+
+### 使用元素
+
+列表使用元素和数组一样，使用索引访问和修改。
+
+```csharp
+Console.WriteLine(list[0] + list[1]);
+list[2] = 3;
+```
+
+列表的元素数量必须通过增加元素来增长。
+列表在刚创建的时候，没有元素，此时不允许使用任何索引进行访问。
+
+### 删除
+
+列表在删除元素后，元素数量会对应减少。可访问的索引会对应减少。
+
+```csharp
+bool b = list.Remove(1); 
+```
+
+删除操作会遍历整个列表，删除第一个匹配的元素。
+如果没有找到，则无事发生。
+
+
+## 其他须知的API
+
+### 增
+
+- `AddRange`：添加一个序列的元素
+- `Insert`：把元素插入到中间位置。（第一个参数是位置，第二个参数是插入的值，原本在这里的值会向后挪）
+- `InsertRange`：把整个序列插入到中间位置。（第一个参数是位置）
+
+### 删
+
+- `RemoveAll`:删除所有符合条件的元素。参数是一个委托，返回值是删除的数量。
+- `RemoveAt`:删除指定索引处的元素。
+- `RemoveRange`：删除从x开始，往后数y的所有元素。
+- `Clear`：清空
+
+### 改
+
+- `Sort`：排序
+
+### 查
+
+- `IndexOf`：查找相同值的元素索引
+- `LastIndexOf`：从后往前找相同值元素索引
+- `FindIndex`：找满足条件元素索引
+- `FindLast`：从后往前找满足条件的元素索引
+- `BinarySearch`：用二分法找相同值的元素索引。
+- `Contains`：是否包含元素。
+
+若找不到元素则返回索引为`-1`。
+二分法需要列表是已排序的（递增），若找不到元素则为最后查找项索引的负数。
+
+## 性能
+
+### 容量
+
+列表的性能与初始化的数组大小有关。
+如果初始数组容量过小，则添加数据时需要不断扩容。
+若初始数组容量过大（或删除了太多元素），则浪费很大的空间。
+
+列表在构造时可以在构造器里传入参数表示初始容量。
+
+容量可以修改`Capacity`属性进行调整。
+
+### 跨度
+
+使用`CollectionsMarshal`类可以获取列表的跨度（仅限有合法元素部分）。
+
+使用跨度偏移元素，比删除再插入的进行两次元素排列有更好的性能。
+
+```csharp
+using System.Runtime.InteropServices;
+
+List<int> list = new List<int>(Enumerable.Range(0, 5));
+
+var span = CollectionsMarshal.AsSpan(list);
+var temp = span[^1];
+span[..^1].CopyTo(span[1..]);
+span[0] = temp;
+
+foreach (var item in list)
+{
+	Console.WriteLine(item);
+}
+```
