--- a/API笔记/字典.md
+++ b/API笔记/字典.md
@@ -1,1 +1,94 @@
-﻿
+﻿# 字典
+
+字典使用键值对储存数据。
+
+相较于列表，字典的索引可以是任意类型且无序的。
+
+## 基本使用
+
+### 创建
+
+```csharp
+Dictionary<string, int> dic = new Dictionary<string, int>();
+```
+
+### 添加，访问，修改元素
+
+```csharp
+dic["hello"] = 123;
+dic["world"] = 456;
+Console.WriteLine(dic["hello"]);
+dic["hello"] = 999;
+Console.WriteLine(dic["hello"]);
+```
+
+### 键不能重复
+
+字典也有`Add`方法可以添加键值对。但如果键重复，这个方法会报错。
+
+字典还有一个`TryAdd`方法，如果存在这个键，那么不会覆写已有的值。
+
+键的比较完全取决于参数的`Equals`方法。
+
+### 删除元素
+
+```csharp
+dic.Remove("hello");
+```
+
+### 尝试取值
+
+`ContainsKey`方法可以判断字典是否含有某个键。
+但如果只是为了给取值加一个保险，那么可以直接使用`TryGetValue`方法。
+
+```csharp
+if (dic.TryGetValue("hello", out int value))
+{
+	Console.WriteLine(value);
+}
+else
+{
+	dic["hello"] = 666;
+}
+```
+
+### 获取引用
+
+`CollectionsMarshal`类可以获取字典某个键的引用。
+当获取初始值本身是一个消耗资源的操作时，可以用这个方法代替`TryGetValue`方法。
+
+需要引用命名空间`using System.Runtime.InteropServices;`。
+
+```csharp
+ref var p = ref CollectionsMarshal.GetValueRefOrAddDefault(dic, "good", out var exists);
+if (!exists)
+{
+	p = "good".Length;
+}
+Console.WriteLine(p);
+```
+
+
+
+## 遍历
+
+字典在`foreach`时得到的元素是`KeyValuePair<K,V>`类型，这个类型可以像元组一样被解构。
+
+```csharp
+foreach (var (s, i) in dic)
+{
+
+}
+```
+
+字典可以单独选择遍历键集合或值集合。在遍历键集合时可以修改值。
+（遍历值集合时，键无论增减都会影响值集合，本身又不能单独修改）。
+
+```csharp
+foreach (var item in dic.Keys)
+{
+	dic[item]++;
+}
+```
+
+
