--- a/API笔记/文件访问.md
+++ b/API笔记/文件访问.md
@@ -1,1 +1,113 @@
-﻿
+﻿# 文件访问
+
+文件访问主要与3个实例类有关
+
+- `DriveInfo`：驱动器（硬盘分区）
+- `DirectoryInfo`：文件夹
+- `FileInfo`：文件
+
+## 驱动器
+
+可以从静态方法`DriveInfo.GetDrives`得到电脑上的所有驱动器。
+驱动器可以访问根文件夹，磁盘大小，名字。
+
+```csharp
+foreach (var item in DriveInfo.GetDrives())
+{
+    Console.WriteLine(item.Name);//磁盘名字
+    Console.WriteLine(item.TotalFreeSpace);//剩余容量
+    Console.WriteLine(item.TotalSize);//总容量
+    DirectoryInfo dir = item.RootDirectory;//获取根文件夹
+}
+```
+
+## 文件夹
+
+文件夹通过路径创建。
+
+```csharp
+DirectoryInfo dir = new DirectoryInfo(Directory.GetCurrentDirectory());//获取当前程序所在目录
+Console.WriteLine(dir.Name);//文件夹名字
+Console.WriteLine(dir.FullName);//完整目录
+DirectoryInfo par = dir.Parent;//获取父目录
+if (!dir.Exists)//判断文件夹是否存在
+{
+	dir.Create();//创建文件夹
+}
+/*
+dir.Delete();//删除文件夹
+dir.MoveTo(dir.FullName + "2");//移动文件夹
+*/
+```
+
+文件夹可以获取这之下的文件和文件夹。有`Get`和`Enumerate`两个版本。
+`Get`会返回数组，需要完全查找完才继续运行。
+`Enumrate`查到多少就运行多少，在数量庞大时运行会更顺畅（但不一定快多少）。
+
+这个方法只会搜索直属的文件/文件夹。要递归整个目录树需要调用重载方法。
+
+```chsarp
+foreach (var item in dir.GetDirectories())
+{
+
+}
+foreach (var item in dir.EnumerateFiles())
+{
+
+}
+
+_ = dir.EnumerateFiles("*",SearchOption.AllDirectories);//查找整个目录树下的所有名字的文件
+_ = dir.EnumerateFiles("*.jpg",SearchOption.AllDirectories);//查找整个目录树下以.jpg结尾的文件
+```
+
+## 文件
+
+文件和文件夹都提供了获取/修改，创建时间，访问时间，修改时间等。
+
+```csharp
+FileInfo file = new FileInfo(Assembly.GetCallingAssembly().Location);
+Console.WriteLine(file.CreationTimeUtc);//创建时间
+Console.WriteLine(file.LastWriteTimeUtc);//最后修改
+Console.WriteLine(file.LastAccessTimeUtc);//最后访问
+Console.WriteLine(file.Length);//文件大小，以字节为单位
+```
+
+文件类也可以进行删除和移动
+
+```csharp
+//file.MoveTo("D:\\t.dll");
+//file.Delete();
+```
+
+文件类可以帮助打开文件流。
+
+```csharp
+using FileStream file1 = file.Open(FileMode.Open);//这个方法需要一个打开方式
+using FileStream file2 = file.OpenWrite();
+using FileStream file3 = file.OpenRead();
+```
+
+- `CreateNew`:创建新文件。已存在文件时报错
+- `Create`:创建或覆写成空文件再打开。
+- `Open`:打开一个已有的文件，没有会报错。
+- `OpenOrCreate`:打开或新建一个文件。
+- `Truncate`:打开一个文件，覆写成空文件。
+- `Append`:从文件末尾追加内容。
+
+## 静态工具类
+
+两个静态工具类
+
+- `Directory`：文件夹
+- `File`：文件
+
+实例类和静态类的主要区别是，
+
+- 实例类的方法返回的也是实例类。静态类全程以字符串交互。
+- 实例类存在一些静态类没有的方法或属性，例如查看文件大小。
+- 静态类存在一些实例类没有的方法，例如直接从文件读取为字符串。
+
+```csharp
+File.ReadAllText(Assembly.GetCallingAssembly().Location);//读取为一个字符串
+File.ReadAllLines(Assembly.GetCallingAssembly().Location);//以换行分隔为字符串数组
+```
