--- a/API笔记/网络连接.md
+++ b/API笔记/网络连接.md
@@ -1,1 +1,101 @@
-﻿
+﻿# 网络连接
+
+可以通过`HttpClient`类获取网络资源。
+
+```csharp
+using HttpClient http = new HttpClient();
+using HttpResponseMessage? responseMessage = await http.GetAsync("https://www.baidu.com");//获取响应
+Console.WriteLine(responseMessage.StatusCode);//状态码，404可以从这里访问
+using Stream stream = await responseMessage.Content.ReadAsStreamAsync();//从主体中读取流
+string s = await responseMessage.Content.ReadAsStringAsync();//以字符串读取流
+```
+
+`HttpClient`类支持4种http协议的操作：
+
+- `Get`：用于从服务器检索信息。
+- `Post`：用于向服务器发送新的数据。
+- `Put`：用于更新服务器上的资源。
+- `Delete`：用于删除服务器上的资源。
+
+我们可以用测试网站`https://httpbin.org`测试。
+
+## Get
+
+Get请求可以跳过获取响应这一步，直接调用获取字符串/流方法。
+
+```csharp
+var response = await http.GetStringAsync("https://httpbin.org/get");
+Console.WriteLine(response);
+```
+
+## Post，Put，Delete
+
+除了Get以外，其他的方式都可以向服务器发送信息。
+这个信息首先要构造一个。
+
+除此之外的部分是相同的，服务器会从标头里找到你属于哪一种请求。
+
+```csharp
+// 创建请求内容
+var content = new StringContent("Hello, World!", Encoding.UTF8, "text/plain");
+var response = await http.PostAsync("https://httpbin.org/post", content);
+
+if (response.IsSuccessStatusCode)
+{
+	var responseBody = await response.Content.ReadAsStringAsync();
+	Console.WriteLine(responseBody);
+}
+else
+{
+	Console.WriteLine($"Error: {response.StatusCode}");
+}
+```
+
+## 返回内容
+
+网页请求的响应一般有三种格式：
+
+- html，这是给浏览器看的文本。浏览器会把这些内容渲染成画面
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Example Page</title>
+</head>
+<body>
+    <h1>Welcome to the Example Page!</h1>
+    <p>This is an example of a web page.</p>
+    <img src="example.jpg" alt="Example Image">
+</body>
+</html>
+```
+
+- json，一种数据格式，需要程序识别成值并处理
+```json
+{
+  "person": {
+    "name": "John Doe",
+    "age": 30,
+    "email": "john.doe@example.com",
+    "phoneNumbers": [
+      "212-555-1234",
+      "646-555-4567"
+    ]
+  }
+}
+```
+
+`xml，一种数据格式，需要程序识别成值并处理
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<person>
+    <name>John Doe</name>
+    <age>30</age>
+    <email>john.doe@example.com</email>
+    <phoneNumbers>
+        <phoneNumber type="home">212-555-1234</phoneNumber>
+        <phoneNumber type="work">646-555-4567</phoneNumber>
+    </phoneNumbers>
+</person>
+```
