--- a/API笔记/集.md
+++ b/API笔记/集.md
@@ -1,1 +1,52 @@
-﻿
+﻿# 集
+
+集是一种无序，不能储存重复值的容器。差不多相当于只有键的字典。
+集的意义在于记录数据，可能在之后要进行处理。
+
+集使用和字典键一样的判断依据，使用`GetHashCode`查找，再用`Equals`比较。
+因此查找很快。
+
+## 基本使用
+
+### 创建
+
+```cshrp
+HashSet<int> hash = new HashSet<int>();
+```
+
+### 添加和删除
+
+```csharp
+for (int i = 0; i < 10; i++)
+{
+	hash.Add(Random.Shared.Next(10)); 
+}
+for (int i = 0; i < 5; i++)
+{
+	hash.Remove(Random.Shared.Next(10));
+}
+```
+
+集不需要考虑重复元素也不需要进行排列。
+添加方法和删除方法都不会因为已经有或没有这个值而报错。
+这两个方法返回`bool`值，表示是否成功添加或移除。即是否已有这个值，或没有这个值。
+
+### 遍历
+
+集没有索引，不能取出单个元素（但还是可以用Linq来获取）。
+基本用法就是遍历。
+
+和其他容器不同的是，集可以在`foreach`的时候修改值。
+
+```csharp
+foreach (var item in hash)
+{
+	Console.WriteLine(item);
+	hash.Remove(item);
+}
+```
+
+不能在`foreach`时修改元素不是这个语法的要求。而是其他容器的迭代器里都有是否修改的判断。
+集没有这个判断。
+
+
