--- a/附录/目录.md
+++ b/附录/目录.md
@@ -1,4 +1,5 @@
-﻿# 语法
+﻿# 目录
+## 语法
 
 - [x] 顶级语句
 - [x] 类型
@@ -14,7 +15,7 @@
 - [x] 模式匹配
 - [x] 运算顺序
 - [x] 数组
-- [x] 引用类型（可空值类型，空传播
+- [x] 引用类型
 - [x] 方法，返回值，参数，引用变量 
 - [x] 自定义类型
 - [x] 类成员
@@ -31,28 +32,50 @@
 - [x] 异步
 - [x] 迭代器
 
-# API
+## API
+
+### 基础类型 
 
 - [x] 数字
 - [x] 字符串
 - [x] 随机数
 - [x] 时间
 - [x] 各类型基类
-- [x] Linq
-- [x] Task
-- [ ] 列表
-- [ ] 字典
-- [ ] 集
-- [ ] 链表
-- [x] 反射
-- [ ] 异步锁
+
+### 集合类型
+
+- [x] 列表
+- [x] 字典
+- [x] 集
+- [x] 栈和队列
+- [x] 链表
+- [x] 其他集合类型
+
+### 文件和网络访问
+
+- [x] 流
+- [x] 文件访问
+- [x] 网络连接
+- [x] 路径
 - [ ] json
 - [ ] Xml
-- [ ] 网络连接
-- [ ] 文件访问
-- [ ] 依赖注入
 
-# Visual Studio
+### 须知类型
+
+- [x] Linq
+- [x] Task
+- [x] 反射
+- [ ] 内存池 
+- [ ] 异步锁
+- [ ] 通道
+
+### 通用主机
+
+- [ ] 依赖注入
+- [ ] 配置
+- [ ] 后台服务
+
+## Visual Studio
 
 - [ ] 下载IDE
 - [ ] VS的提示
