--- a/API笔记/链表.md
+++ b/API笔记/链表.md
@@ -1,1 +1,55 @@
-﻿
+﻿# 链表
+
+链表是一种以节点为基础的容器。
+节点会储存值，和下一个节点的引用。
+像一条锁链一样，可以从中间断开，以及再拼回去。
+
+链表在插入，删除上有很大的优势，因为不用把之后的节点重新排序。
+但是在遍历上有很大的劣势，因为每个步骤都要查找引用。
+
+## 基本使用
+
+### 创建
+
+```csharp
+LinkedList<int> link = new LinkedList<int>();
+```
+
+### 添加
+
+链表可以直接添加值，或添加一个节点。
+
+```csharp
+link.AddLast(0);
+link.AddLast(1);
+link.AddFirst(2);
+
+LinkedListNode<int> node = new LinkedListNode<int>(5);
+link.AddLast(node);
+```
+
+链表添加值会自动构造一个节点并添加节点。
+
+链表添加节点一般是找一个已经移除的节点再接回去，没有必要自己构造。
+
+
+### 删除
+
+```csharp
+link.RemoveFirst();
+link.RemoveLast();
+link.Remove(node);
+```
+
+### 使用
+
+链表没有办法直接获取中间的值。
+必须提前储存节点并从节点获取值。
+否则就只能通过遍历来得到节点。
+
+### 不能添加有主的节点
+
+c#的链表类是有限制的，不能添加已经有主的节点。
+
+链表节点在理念上仅是引用一个节点，没有任何限制。
+例如可以形成一个环，经常在算法题中出现。
